Fix mobile UI - menu spacing and fight menu

--- a/src/index.css
+++ b/src/index.css
@@ -296,3 +296,149 @@ span span,
   left: 0.1em;
   right: 0.1em;
 }
+
+/* ========== MOBILE FIXES ========== */
+
+/* Make game container fill screen properly */
+html, body {
+  height: 100%;
+  overflow: hidden;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+#pokemon {
+  width: 100%;
+  max-width: 100vw;
+  height: auto;
+  min-height: 100vh;
+  font-size: 4.5vw; /* Scale everything based on viewport */
+}
+
+/* Move battle area up, dialog area down */
+.depth {
+  position: relative;
+  height: 100vh;
+}
+
+.layer.foe,
+.layer.player {
+  position: absolute;
+  width: 100%;
+}
+
+.layer.foe {
+  top: 2em;
+}
+
+.layer.player {
+  top: 6em;
+}
+
+/* Position windows/dialog at bottom of screen */
+.layer.windows {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  top: auto !important;
+  height: auto;
+  padding-bottom: 2em;
+}
+
+/* Text dialog box - full width at bottom */
+.windows .window.texts {
+  position: relative;
+  width: calc(100% - 8em);
+  margin: 0 auto;
+  height: 3.5em;
+}
+
+/* Menu box - better spacing */
+.windows .window.menu {
+  position: absolute;
+  right: 0.5em;
+  bottom: 0;
+  width: 8em;
+  height: 3.5em;
+  padding: 0.6em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+}
+
+.windows .window.menu .button {
+  width: 45%;
+  text-align: center;
+  padding: 0.2em 0;
+  margin: 0.1em;
+}
+
+/* Fight menu - position properly */
+.windows .window.fight {
+  position: fixed !important;
+  bottom: 5em !important;
+  left: 1em !important;
+  right: 1em !important;
+  top: auto !important;
+  min-height: 5em;
+  padding: 0.8em;
+  z-index: 100;
+}
+
+.windows .window.fight .button {
+  display: block;
+  padding: 0.4em;
+  margin: 0.3em 0;
+}
+
+/* Fight details box */
+.windows .window.fight .fight-details {
+  position: absolute;
+  top: -4.5em;
+  left: 0;
+  width: 7em;
+  height: 3em;
+  padding: 0.5em;
+}
+
+/* Item menu */
+.windows .window.item {
+  position: fixed !important;
+  bottom: 5em !important;
+  left: 1em !important;
+  right: 1em !important;
+  top: auto !important;
+  min-height: 4em;
+  padding: 0.8em;
+  z-index: 100;
+}
+
+/* PKMN menu */
+.windows .window.pkmn {
+  position: fixed !important;
+  bottom: 5em !important;
+  left: 1em !important;
+  right: 1em !important;
+  top: auto !important;
+  min-height: 4em;
+  padding: 0.8em;
+  z-index: 100;
+}
+
+/* Touch-friendly buttons */
+.button {
+  min-height: 1.5em;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0,0,0,0.2);
+}
+
+.button:active {
+  opacity: 0.7;
+}
